Add new widgets block

--- a/code/dev/parts/dashboard/widgets/widget-add.html
+++ b/code/dev/parts/dashboard/widgets/widget-add.html
@@ -57,6 +57,19 @@
           <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
         </dl>
       </div>
+      <div uib-accordion-group is-open="accordionState.isThirdPartyIntegrationsHeaderOpen">
+        <uib-accordion-heading>
+          <span class="widget-group-title h5">Third-Party Integrations
+          <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': accordionState.isThirdPartyIntegrationsHeaderOpen, 'glyphicon-chevron-right': !accordionState.isThirdPartyIntegrationsHeaderOpen}"></i>
+          </span>
+        </uib-accordion-heading>
+        <dl class="dl-horizontal">
+          <dt ng-repeat-start="(key, widget) in widgets | orderWidgets: 'thirdPartyIntegrations' ">
+            <a href="" ng-click="addWidget(key)">{{::widget.title}}</a>
+          </dt>
+          <dd ng-repeat-end ng-if="widget.description">{{::widget.description}}</dd>
+        </dl>
+      </div>
     </uib-accordion>
   </div>
 </div>
