--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -66,8 +66,8 @@
           <a id="side-menu-sub-item__webApp-ssl_names" ui-sref-active="active" ui-sref="index.webApp.ssl_names" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-lock"></i> SSL Names
           </a>
-          <a id="side-menu-sub-item__webApp-waf_rules" style="color:grey"  ui-sref-active="active" uisref="index.webApp.ssl_names" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-lock"></i> WAF Rules <i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
+          <a id="side-menu-sub-item__webApp-waf_rules" ui-sref-active="active" ui-sref="index.webApp.waf_rules" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-list-alt"></i> WAF Rules
           </a>
           <a id="side-menu-sub-item__webApp-staging-environment" ui-sref-active="active" ui-sref="index.webApp.staging-environment" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-eye"></i> Staging Env.
