--- a/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
+++ b/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
@@ -1,3 +1,41 @@
-<div class="domain-waf-rules">
-<!-- TODO this template-->
+<div class="panel panel-default domain-waf-rules">
+  <div class="panel-heading"> WAF Rules </div>
+  <!-- TODO: add pagination ??? -->
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Use This Rule</th>
+          <th>Rule Name </th>
+          <th> Rule Type</th>
+          <th> Updated At</th>
+          <th> Updated By </th>
+          <th class="thin">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="item in $ctrl.orderRecords track by $index">
+          <td class="actions">
+           <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
+            <input type="checkbox" class="" ng-model="item.isChecked">
+
+            <a href="" ng-click="$ctrl.onUpWAFRule(item)" ng-if="!item.loading" uib-tooltip="Up WAF Rule">
+              <i class="glyphicon glyphicon-chevron-up "></i>
+            </a>
+            <a href="" ng-click="$ctrl.onDownWAFRule(item)" ng-if="!item.loading" uib-tooltip="Down WAF Rule">
+              <i class="glyphicon glyphicon-chevron-down "></i>
+            </a>
+          </td>
+          <td> {{item.rule_name}} </td>
+          <td> {{item.comment}} </td>
+          <td> {{getRelativeDate(item.updated_at) }}</td>
+          <td ng-if="auth.isRevadmin()">{{item.updated_by}}</td>
+          <td>
+            <div waf-rule-staging-status ng-id="item.id"></div>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
