--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -572,8 +572,7 @@
             </uib-tab>
              <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" _uibpopover="TODO text">
               <!--  “WAF” -->
-              <uib-tab-heading>WAF<i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon"><!-- TODO: delete --></i>
-              </uib-tab-heading>
+              <uib-tab-heading>WAF</uib-tab-heading>
               <div class="form-group form-inline">
                 <label for="enableWafRules" class="col-sm-3 control-label">Enable WAF Functionality For The Domain</label>
                 <div class="col-md-9">
