--- a/code/dev/parts/waf_rules/dialog/view-waf-rule.tpl.html
+++ b/code/dev/parts/waf_rules/dialog/view-waf-rule.tpl.html
@@ -3,8 +3,7 @@
 </div>
 <div class="modal-body">
   <div class="form-group">
-    <!-- TODO: rebase style to css file-->
-  <textarea class="" style="width: 100%; height: 30vh" ng-model="model.rule_body" _disabled="true">
+  <textarea class="waf-rule-body--view" ng-model="model.rule_body" disabled="true">
   </textarea>
   </div>
 </div>
