--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -5,7 +5,7 @@
   </div>
   <div class="modal-body">
     Are you sure you want to delete WAF Rule
-    <strong>{{model.cert_name}}</strong>?
+    <strong>{{model.rule_name}}</strong>?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
@@ -18,7 +18,7 @@
   </div>
   <div class="modal-body">
     Are you sure you want to update WAF Rule
-    <strong>{{model.cert_name}}</strong>?
+    <strong>{{model.rule_name}}</strong>?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
@@ -31,14 +31,14 @@
   </div>
   <div class="modal-body">
     Are you sure you want to publish WAF Rule
-    <strong>{{model.cert_name}}</strong>?
+    <strong>{{model.rule_name}}</strong>?
   </div>
   <div class="modal-footer">
     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     <button class="btn btn-success" type="button" ng-click="ok()">OK</button>
   </div>
 </script>
-<div class="container-fluid" ui-view="page">
+<div class="container-fluid waf-rules__page" ui-view="page">
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
@@ -81,91 +81,13 @@
           </div>
         </div>
         <div class="panel-body">
-          <uib-tabset active="active">
-            <uib-tab index="1" heading="Built-In Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
-
-              <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-                There are no any built-in WAF rules configured in the system
-              </div>
-              <div class="alert alert-warning" ng-if="records == null && !_loading">
-                Failed to retrieve a list of resources - please try again later
-              </div>
-              <div class="alert alert-info" ng-if="_loading">
-                <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
-              </div>
-              <crud-pagination></crud-pagination>
-              <div class="table-responsive">
-                <table class="table">
-                  <thead>
-                    <tr>
-                      <th>
-                        <a href="" ng-click="order('rule_name')">Rule Name</a>
-                        <span class="sortorder" ng-show="filter.predicate === 'rule_name'" ng-class="{reverse: filter.reverse}"></span>
-                      </th>
-                      <th><a href="" ng-click="order('comment')">Rule Description</a>
-                        <span class="sortorder" ng-show="filter.predicate === 'comment'" ng-class="{reverse: filter.reverse}"></span>
-                      </th>
-                      <th><a href="" ng-click="order('updated_at')">Updated At</a>
-                        <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
-                      </th>
-                      <!--TODO: later <th><a href="" ng-click="order('updated_by')">Updated By</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
-                  </th>-->
-                      <th ng-if="auth.isRevadmin()"> <a href="" ng-click="order('domains')">Used By</a>
-                        <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>
-                      <th class="thin">Status</th>
-                      <th>Actions</th>
-                      <!--<th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                    <a href="" ng-click="order('companyName')">Account</a>
-                    <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
-                  </th>-->
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-                      <td> {{item.rule_name}} </td>
-                      <td> {{item.comment}} </td>
-                      <td>{{getRelativeDate(item.updated_at) }}</td>
-                      <td ng-if="auth.isRevadmin()">{{item.updated_by}}</td>
-                      <!--TODO: later
-                  <td>
-                    <div class="waf-rule-used-by">{{item.domains}}</div>
-                  </td>-->
-                      <td>
-                        <div waf-rule-staging-status ng-id="item.id"></div>
-                      </td>
-                      <td class="actions">
-                        <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                        <a href="" ng-click="openViewDialogBuitInRule(item)" ng-if="!item.loading" uib-tooltip="View WAF Rule">
-                          <i class="fa fa-eye"></i>
-                        </a>
-                        <a ui-sref=".edit({id: item.id})" ng-if="!item.loading && auth.isRevadmin()" uib-tooltip="Edit WAF Rule">
-                          <i class="glyphicon glyphicon-pencil"></i>
-                        </a>
-                        <a href="" ng-if="!item.loading && auth.isRevadmin()" ng-click="duplicateWAFRule(item)" ng-class="{'disabled':isReadOnly()}"
-                          uib-tooltip="Duplicate WAF Rule">
-                          <i class="fa fa-clone"></i>
-                        </a>
-                        <a href="" ng-if="!item.loading && auth.isRevadmin()" ng-click="deleteWAFRule(item)" ng-class="{'disabled':isReadOnly()}"
-                          uib-tooltip="Delete WAF Rule">
-                          <i class="glyphicon glyphicon-trash"></i>
-                        </a>
-
-                      </td>
-                      <!--<td ng-if="auth.isReseller() ||  auth.isRevadmin()">
-                    <div>{{item.companyName}}</div>
-                  </td>-->
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <crud-pagination></crud-pagination>
-              <hr>
-            </uib-tab>
-            <uib-tab index="2" heading="Custom Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+          <uib-tabset active="active" class="waf-rules__tabs">
+            <uib-tab index="1" heading="Custom Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
               <div id="waf-rules-list__custom" ng-include="'parts/waf_rules/view/waf-rules-list__custom.tpl.html'"></div>
             </uib-tab>
-
+            <uib-tab index="2" heading="Built-In Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+              <div id="waf-rules-list__builtin" ng-include="'parts/waf_rules/view/waf-rules-list__builtin.tpl.html'"></div>
+            </uib-tab>
           </uib-tabset>
         </div>
       </div>
