--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="form-group">
                   <!-- TODO: -->
-                  <a uisref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()"
+                  <a uisref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly() || true"
                     popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The system can automatically create white-listing WAF rules using real end user traffic of a website. WAF learning mode can be enabled using “Learning Mode” switch in WAF tab of your website configuration.">
                     <i class="glyphicon glyphicon-plus"></i>&nbsp; Learn From The Logs And Add Auto-Generated Rule
                   </a>
