--- a/code/dev/parts/waf_rules/new.html
+++ b/code/dev/parts/waf_rules/new.html
@@ -5,7 +5,7 @@
     </h2>
   </div>
 </div>
-<div class="row">
+<div class="row" ng-init="initNew()">
   <div class="col-md-12">
     <div class="panel panel-default">
       <div class="panel-heading">
