Fix - clear css

--- a/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
+++ b/code/dev/parts/domains/domain-custom-vcl-backends/domain-custom-vcl-backends.tpl.html
@@ -25,8 +25,8 @@
               <a class="btn btn-default btn-xs" href="" title="Expand Block" ng-show="item.$$backendBlockState.isCollapsed" ng-click="item.$$backendBlockState.isCollapsed = !item.$$backendBlockState.isCollapsed">
                 <i class="glyphicon glyphicon-chevron-down"></i>
               </a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)"><i class="glyphicon glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
-              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)"><i class="glyphicon glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpBackendBlock(item)"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
+              <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownBackendBlock(item)"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
             </div>
             <div class="pull-right panel-button-right">
               <!-- remove widget -->
