--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -437,9 +437,9 @@
                             <i class="glyphicon glyphicon-chevron-down"></i>
                           </a>
                           <!--  Caching Rule Up  -->
-                          <a class="btn btn-default btn-xs" href="" ng-click="onUpCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
+                          <a class="btn btn-default btn-xs" href="" ng-click="onUpCachingRule(caching_rule)"><i class="glyphicon glyphicon-arrow-up" title="Move One Position Up"></i></a>
                           <!--  Caching Rule Down  -->
-                          <a class="btn btn-default btn-xs" href="" ng-click="onDownCachingRule(caching_rule)"><i class="glyphicon glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+                          <a class="btn btn-default btn-xs" href="" ng-click="onDownCachingRule(caching_rule)"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
                           <!-- // -->
                         </div>
                         <div class="pull-right panel-button-right">
