--- a/code/dev/parts/domains/domain-lua-scripting/domain-lua-scripting.tpl.html
+++ b/code/dev/parts/domains/domain-lua-scripting/domain-lua-scripting.tpl.html
@@ -55,9 +55,9 @@
                   <i class="glyphicon glyphicon-chevron-down"></i>
                 </a>
                 <!--  Block Up  -->
-                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpItemBP(lua_block)"><i class="glyphicon glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
+                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpItemBP(lua_block)"><i class="glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
                 <!--  Block Down  -->
-                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownItemBP(lua_block)"><i class="glyphicon glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownItemBP(lua_block)"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
                 <!-- // -->
               </div>
               <div class="pull-right panel-button-right">
@@ -117,9 +117,9 @@
                   <i class="glyphicon glyphicon-chevron-down"></i>
                 </a>
                 <!--  Block Up  -->
-                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpItemCO(lua_block)"><i class="glyphicon glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
+                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onUpItemCO(lua_block)"><i class="glyphicon glyphicon-arrow-up " title="Move One Position Up"></i></a>
                 <!--  Block Down  -->
-                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownItemCO(lua_block)"><i class="glyphicon glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
+                <a class="btn btn-default btn-xs" href="" ng-click="$ctrl.onDownItemCO(lua_block)"><i class="glyphicon glyphicon-arrow-down" title="Move One Position Down"></i></a>
                 <!-- // -->
               </div>
               <div class="pull-right panel-button-right">
