Update Domian WAF Rules

--- a/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
+++ b/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
@@ -9,9 +9,9 @@
           <th> Rule Type</th>
           <th> Description</th>
           <th> Updated At</th>
-          <th> Updated By </th>
+          <th ng-if="auth.isRevadmin()">Updated By </th>
           <th class="thin_">Status</th>
-          <th>Use This Rule</th>
+          <th class="text-center">Use This Rule</th>
         </tr>
       </thead>
       <tbody>
