--- a/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
+++ b/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
@@ -10,7 +10,7 @@
     </div>
     <div class="form-group pull-right">
       <div class="col-sm-12">
-        <a id="addNewWAFLocationBtn" ng-click="$ctrl.onAddNewWAFLocation($event)" class="btn btn-primary btn-sm " title="Add New WAF Location"
+        <a id="addNewWAFLocationBtn" ng-click="$ctrl.onAddNewWAFLocation(true)" class="btn btn-primary btn-sm " title="Add New WAF Location"
           opover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Add New WAF Location"><i class="glyphicon glyphicon-plus"></i></a>
       </div>
     </div>
