--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -33,3 +33,5 @@
 <div ng-message="domain-name-regular-or-wildcard-domains" class="alert-text alert-text--wildcard-domains-fields">Incorrect wildcard or domain name format</div>
 <!-- message for validate-domain-name-or-url  -->
 <div ng-message="domain-name-or-url" class="alert-text alert-text--domain-name-or-url-fields">Incorrect domain name format or URL</div>
+<!-- message for validate-waf-location-name  -->
+<div ng-message="waf-location-name" class="alert-text alert-text--waf-location-name">Incorrect WAF Location name format</div>
