Create directive validate-uniqueness-in-array

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -35,3 +35,5 @@
 <div ng-message="domain-name-or-url" class="alert-text alert-text--domain-name-or-url-fields">Incorrect domain name format or URL</div>
 <!-- message for validate-waf-location-name  -->
 <div ng-message="waf-location-name" class="alert-text alert-text--waf-location-name">Incorrect WAF Location name format</div>
+<!-- message for validate-uniqueness-in-array  -->
+<div ng-message="uniqueness-in-array" class="alert-text alert-text--uniqueness-in-array">The WAF Location name must be uniqueness </div>
