--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -190,6 +190,7 @@
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-comment-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-waf-location-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-or-url.directive.js"></script>
