--- a/code/dev/__index.html
+++ b/code/dev/__index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+  <title>RevAPM Customer Portal</title>
 
   <!-- build:css css/vendor.css -->
   <!--<link rel="stylesheet" href="bower_components/PACE/themes/orange/pace-theme-minimal.css" rel="stylesheet">-->
@@ -39,12 +39,9 @@
   <![endif]-->
 
 </head>
-<body data-ng-app="revapm.Portal" class="hide-vertical-scroll">
-<div ng-hide="!!vendor" class="loader"></div>
-<link ng-if="vendor" rel="stylesheet" ng-href="css/{{vendor}}.css">
-
+<body data-ng-app="revapm.Portal">
 <toaster-container toaster-options="{'animation-class': 'toast-top-center'}"></toaster-container>
-<div ui-view="layout" class="layout {{vendor}}"></div>
+<div ui-view="layout" class="layout"></div>
 
 
 <!--<script>
@@ -61,10 +58,9 @@
     }
   };
 </script>-->
-<div zendesk-include></div>
-
+<script src="https://www.youtube.com/iframe_api"></script>
 <!-- build:js scripts/vendor.js -->
-
+<script src="js/zendesk/zendesk.js"></script>
 <!--<script type="text/javascript" src="bower_components/PACE/pace.js"></script>-->
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -97,7 +93,7 @@
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 <script type="text/javascript" src="bower_components/angular-intro.js/build/angular-intro.min.js"></script>
-<script type="text/javascript" src="bower_components/ng-youtube-embed/build/ng-youtube-embed.min.js"></script>
+<script type="text/javascript" src="bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
 <script type="text/javascript" src='bower_components/Sortable/Sortable.min.js'></script>
 <script type="text/javascript" src='bower_components/Sortable/ng-sortable.js'></script>
 <!-- <script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js'></script> -->
@@ -140,15 +136,29 @@
 <script type="text/javascript" src="bower_components/satellizer/dist/satellizer.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
-
 <!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
 <!-- endbuild -->
 
 <script src="config.js"></script>
 <!-- Google Analytics -->
-<script google-analytics-include></script>
-
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create',  window.gaAccount, 'auto');
+</script>
 <!-- End Google Analytics -->
+<!-- Tamboo Code -->
+<script>
+(function(t,a,m,b,o,e,v){if(t[o])return;t[o]=function(){t[o].a=t[o].a||[];
+t[o].a.push(arguments);};t[o].l=Date.now();t[o].v=1.0;t[o].s=b;e=a.createElement(m);
+v=a.getElementsByTagName(m)[0];e.async=1;e.src=b;v.parentNode.insertBefore(e,v);
+})(window,document,'script','https://js.gettamboo.com/agent.min.js','tamboo');
+tamboo('init', '586dabec2c31580011b8f385');
+</script>
+<!-- End Tamboo Code -->
+<!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter41948789 = new Ya.Metrika({ id:41948789, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/41948789" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 <!-- build:js scripts/compiled.js -->
 <script type="text/javascript" src="js/portal/config/config.module.js"></script>
 <script type="text/javascript" src="js/portal/config/config.constants.js"></script>
@@ -162,8 +172,6 @@
 <script type="text/javascript" src="js/portal/shared/crud/crud.controller.js"></script>
 <script type="text/javascript" src="js/portal/shared/crud/pagination.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/filter/filter.directive.js"></script>
-<script type="text/javascript" src="js/portal/shared/directives/zendesk-include.directive.js"></script>
-<script type="text/javascript" src="js/portal/shared/directives/google-analytics-include.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/util/util.factory.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/ui-sref-active-if.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/directives/menu-toggle.directive.js"></script>
@@ -190,10 +198,7 @@
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-pattern-comment-no-special-chars.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-query-strings-options.directive.js"></script>
-<script type="text/javascript" src="js/portal/shared/validators/validate-uniqueness-in-array.directive.js"></script>
-<script type="text/javascript" src="js/portal/shared/validators/validate-waf-location-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-wildcard-domain-field.directive.js"></script>
-<script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-or-url.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name.directive.js"></script>
@@ -213,7 +218,6 @@
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
-<script type="text/javascript" src="js/portal/resources/model/locations.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
@@ -222,8 +226,6 @@
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/azureResources.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/azureSubscriptions.factory.js"></script>
-<script type="text/javascript" src="js/portal/resources/model/vendors.factory.js"></script>
-<script type="text/javascript" src="js/portal/resources/model/waf_rules.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
 <script type="text/javascript" src="js/portal/auth/auth.config.js"></script>
@@ -278,11 +280,6 @@
 <script type="text/javascript" src="js/portal/domains/domains.routes.js"></script>
 <script type="text/javascript" src="js/portal/domains/domains.constants.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-select/domainSelect.directive.js"></script>
-<script type="text/javascript" src="js/portal/domains/domain-the-third-party-links/domainTheThirdPartyLinks.directive.js"></script>
-<script type="text/javascript" src="js/portal/domains/domain-waf-locations/domainWafLocations.directive.js"></script>
-<script type="text/javascript" src="js/portal/domains/domain-waf-rules/domainWafRules.directive.js"></script>
-<script type="text/javascript" src="js/portal/domains/domain-waf-actions-list/domainWafActionsList.directive.js"></script>
-
 <script type="text/javascript" src="js/portal/domains/domain-staging-status/domainStagingStatus.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-caching-rule/domainCachingRule.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/domain-check-integration/domainCheckIntegration.directive.js"></script>
@@ -318,8 +315,6 @@
 <script type="text/javascript" src="js/portal/companies/companies.module.js"></script>
 <script type="text/javascript" src="js/portal/companies/companies.routes.js"></script>
 <script type="text/javascript" src="js/portal/companies/controller/companies.controller.js"></script>
-<script type="text/javascript" src="js/portal/companies/controller/accountResources.controller.js"></script>
-<script type="text/javascript" src="js/portal/companies/controller/changeAccountVendorModalController.js"></script>
 
 <script type="text/javascript" src="js/portal/cache/cache.module.js"></script>
 <script type="text/javascript" src="js/portal/cache/cache.routes.js"></script>
@@ -407,7 +402,6 @@
 <script type="text/javascript" src="js/portal/keys/controller/keysEdit.controller.js"></script>
 
 <script type="text/javascript" src="js/portal/dashboard/dashboard.module.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/dashboard.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/dashboard.routes.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/filters/dashboard.filters.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/services/dashboard.service.js"></script>
@@ -415,17 +409,6 @@
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-new.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-delete.conmponent.js"></script>
-<!-- Apps Analytic -->
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/widgetsAppsAnalytics.module.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/widgetsAppsAnalyticsEditConfig.controller.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-bw-chart/widgetMobileBWChart.config.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-http-codes-chart/widgetMobileHTTPCodesChart.config.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-rps-chart/widgetMobileRPSChart.config.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetMobileTops.config.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsAppsSDKDestributionsReports.controller.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsAppsSDKTopsReports.controller.js"></script>
-<script type="text/javascript" src="js/portal/dashboard/widgets/apps-analytics/mobile-tops/widgetsMobileTopsEditConfig.controller.js"></script>
-<!-- //Apps Analytic -->
 <!-- Web Analytic -->
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/widgetsWebAnalyticsEditConfig.controller.js"></script>
@@ -467,13 +450,7 @@
 <script type="text/javascript" src="js/portal/dns_zones/controller/dns_zonesCrud.controller.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegration.directive.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns-zone-check-integration/dnsZoneCheckIntegrationPanel.directive.js"></script>
-<script type="text/javascript" src="js/portal/dns_zones/dns-zone-select/dnsZoneSelect.directive.js"></script>
 <!-- //DNS Zones -->
-<!-- DNS Analytics-->
-<script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.module.js"></script>
-<script type="text/javascript" src="js/portal/dns_analytics/dns_analytics.routes.js"></script>
-<script type="text/javascript" src="js/portal/dns_analytics/controllers/DNSAnalytics.controller.js"></script>
-<!-- //DNS Analytics-->
 <!-- Azure Marcetplace-->
 <script type="text/javascript" src="js/portal/azure-resources/azureResources.module.js"></script>
 <script type="text/javascript" src="js/portal/azure-resources/azureResources.routes.js"></script>
@@ -485,17 +462,6 @@
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptions.controller.js"></script>
 <script type="text/javascript" src="js/portal/azure-subscriptions/controller/azureSubscriptionResources.controller.js"></script>
 <!-- //Azure Marcetplace-->
-<!-- WAF Rules -->
-<script type="text/javascript" src="js/portal/waf_rules/waf_rules.module.js"></script>
-<script type="text/javascript" src="js/portal/waf_rules/waf_rules.routes.js"></script>
-<script type="text/javascript" src="js/portal/waf_rules/controller/wafRulesCrud.controller.js"></script>
-<script type="text/javascript" src="js/portal/waf_rules/controller/wafRulesBuiltInList.controller.js"></script>
-<script type="text/javascript" src="js/portal/waf_rules/waf-rule-staging-status/wafRuleStagingStatus.directive.js"></script>
-<!-- //WAF Rules -->
-<!-- WAF Analytics -->
-<script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.module.js"></script>
-<script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.routes.js"></script>
-<!-- //WAF Analytics -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
